--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,25 @@
 /* ex 1 */
 .ex-1-square {
-  width: 100px;
-  height: 100px;
-  border: 1px solid red;
-  transition: background 1s ease-in-out;
+    width: 100px;
+    height: 100px;
+    border: 1px solid red;
+    transition: background 1s ease-in-out;
 }
-
 .ex-1-square:hover {
   background-color: red;
 }
-
 /* /ex 1 */
 /* ex 2 */
 .ex-2-square {
-  width: 100px;
-  height: 100px;
-  background: red;
-  transition: width 1s ease-in-out;
+    width: 100px;
+    height: 100px;
+    background: red;
+    transition: width 1s ease-in-out;
 }
-
 .ex-2-square:active {
   width: 100%;
   background-color: red;
 }
-
 /* /ex 2 */
 /* ex 3 */
 .ex-3-square {
@@ -32,11 +28,9 @@
   background: red;
   transition: border-radius 1s ease-in-out;
 }
-
 .ex-3-square:hover {
   border-radius: 50%;
 }
-
 /* /ex 3 */
 /* ex 4 */
 .ex-4-square {
@@ -44,12 +38,10 @@
   height: 100px;
   background: red;
 }
-
 .ex-4-square:hover {
   background-color: inherit;
   transition: background 4s ease-in-out;
 }
-
 /* / ex 4 */
 /* ex 5 */
 .ex-5-square {
@@ -57,65 +49,78 @@
   width: 60px;
   height: 60px;
   background: red;
-}
 
+}
 .ex-5-square:hover {
   transform: scale(1.9);
   transition: all 1.6s ease-in-out;
 }
-
 .ex-5-square:active {
   transform: scale(0.7);
   transition: all 1.6s ease-in-out;
 }
-
-/* ex img 6-7-8 */
+/* /ex 5 */
+/* ex img -6-7-8 */
 .ex-6-img, .ex-7-img, .ex-8-img {
   width: 500px;
+  filter: grayscale(0);
+  transition: all 2s ease-in-out;
 }
-
+.ex-6-img:hover {
+  filter: grayscale(100%) sepia(60%);
+  transition: filter 2s ease-in-out;
+}
+.ex-7-img {
+  filter: sepia(0) grayscale(0);
+}
+.ex-7-img:hover {
+  transition: filter 2s ease-in-out;
+  filter: sepia(60%) grayscale(40%);
+}
+.ex-8-img {
+  filter: saturate(100%) sepia(0);
+}
+.ex-8-img:hover {
+  filter: saturate(50%) sepia(30%);
+  border-radius: 30%;
+}
 /* /ex img 6-7-8 */
 .ex-9-img {
-  margin: 50px 100px;
-  width: 400px;
+    margin: 50px 100px;
+    width: 400px;
 }
-
 .ex-10-icon {
-  font-size: 60px;
+    font-size: 60px;
 }
-
 .ex-11-icon {
-  font-size: 60px;
+    font-size: 60px;
 }
-
 .ex-12-button, .ex-13-button {
-  position: relative;
-  display: block;
-  width: 200px;
-  height: 70px;
-  text-transform: uppercase;
-  border: 3px solid #1b3c59;
-  color: #1b3c59;
-  font-size: 20px;
-  line-height: 70px;
-  text-align: center;
-  text-decoration: none;
+    position: relative;
+    display: block;
+    width: 200px;
+    height: 70px;
+    text-transform: uppercase;
+    border: 3px solid #1b3c59;
+    color: #1b3c59;
+    font-size: 20px;
+    line-height: 70px;
+    text-align: center;
+    text-decoration: none;
 }
-
 .ex-12-top-white, .ex-13-top-white {
-  position: absolute;
-  top: -10px;
-  left: 10%;
-  background: #f5f5f5;
-  width: 60px;
-  height: 20px;
+    position: absolute;
+    top: -10px;
+    left: 10%;
+    background: #f5f5f5;
+    width: 60px;
+    height: 20px;
 }
-
 .ex-12-bottom-white, .ex-13-bottom-white {
-  position: absolute;
-  bottom: -10px;
-  right: 20%;
-  background: #f5f5f5;
-  width: 60px;
-  height: 20px;
+    position: absolute;
+    bottom: -10px;
+    right: 20%;
+    background: #f5f5f5;
+    width: 60px;
+    height: 20px;
 }
