--- a/css/style.css
+++ b/css/style.css
@@ -85,29 +85,64 @@
   border-radius: 30%;
 }
 /* /ex img 6-7-8 */
+/* ex 9 */
 .ex-9-img {
-    margin: 50px 100px;
-    width: 400px;
+  margin: 50px 100px;
+  width: 400px;
+  transition: all 2s ease-in-out;
 }
+.ex-9-img:hover {
+  transform: scale(2);
+  border-radius: 50%;
+  transition: all 2s ease-in-out;
+}
+/* /ex 9 */
+/* ex 10 */
 .ex-10-icon {
-    font-size: 60px;
+  font-size: 60px;
+  animation: ruota 0.5s infinite;
 }
+@keyframes ruota {
+  0% { transform: rotate(0deg); }
+  12.5% { transform: rotate(45deg);}
+  25% { transform: rotate(90deg);}
+  50% { transform: rotate(180deg);}
+  62.5% { transform: rotate(225deg);}
+  75% { transform: rotate(270deg);}
+  100% { transform: rotate(360deg);}
+}
+/* /ex 10 */
+/* ex 11 */
 .ex-11-icon {
-    font-size: 60px;
+  font-size: 60px;
 }
+.ex-11-icon:hover {
+  animation: ruota2 1s infinite;
+}
+@keyframes ruota2 {
+  0% { transform: rotate(0deg); }
+  12.5% { transform: rotate(45deg);}
+  25% { transform: rotate(90deg);}
+  50% { transform: rotate(180deg);}
+  62.5% { transform: rotate(225deg);}
+  75% { transform: rotate(270deg);}
+}
+/* /ex 11 */
+/* ex 12 */
 .ex-12-button, .ex-13-button {
-    position: relative;
-    display: block;
-    width: 200px;
-    height: 70px;
-    text-transform: uppercase;
-    border: 3px solid #1b3c59;
-    color: #1b3c59;
-    font-size: 20px;
-    line-height: 70px;
-    text-align: center;
-    text-decoration: none;
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 70px;
+  text-transform: uppercase;
+  border: 3px solid #1b3c59;
+  color: #1b3c59;
+  font-size: 20px;
+  line-height: 70px;
+  text-align: center;
+  text-decoration: none;
 }
+/* /ex 12 */
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
     top: -10px;
