--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,31 @@
   text-align: center;
   text-decoration: none;
 }
+.ex-12-top-white {
+  animation: top_slice 1s  linear infinite alternate;
+}
+.ex-12-bottom-white {
+  animation: bottom_slice 1s  linear infinite alternate;
+  transition-delay: transfomr 0.5s;
+}
+/* @keyframes top_slice {
+  0% { transform: translateX(-25%);}
+  12.5% { transform: translateX(0%);}
+  25% { transform: translate(35%);}
+  50% { transform: translateX(75%);}
+  62.5% { transform: translateX(100%);}
+  75% { transform: translateX(125%);}
+  87.5% { transform: translateX(150%);}
+  100% { transform: translateX(175%);}
+} */
+@keyframes bottom_slice {
+  0% { transform: translateX(-25%);}
+  12.5% { transform: translateX(-50%);}
+  25% { transform: translateX(-75%);}
+  50% { transform: translateX(-100%);}
+  87.5% { transform: translateX(-150%);}
+  100% { transform: translateX(50%);}
+}
 /* /ex 12 */
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
