--- a/css/style.css
+++ b/css/style.css
@@ -147,25 +147,16 @@
 }
 .ex-12-bottom-white {
   animation: bottom_slice 1s  linear infinite alternate;
-  transition-delay: transfomr 0.5s;
 }
-/* @keyframes top_slice {
+@keyframes top_slice {
   0% { transform: translateX(-25%);}
-  12.5% { transform: translateX(0%);}
-  25% { transform: translate(35%);}
-  50% { transform: translateX(75%);}
-  62.5% { transform: translateX(100%);}
-  75% { transform: translateX(125%);}
-  87.5% { transform: translateX(150%);}
+
   100% { transform: translateX(175%);}
-} */
+}
 @keyframes bottom_slice {
-  0% { transform: translateX(-25%);}
-  12.5% { transform: translateX(-50%);}
-  25% { transform: translateX(-75%);}
-  50% { transform: translateX(-100%);}
-  87.5% { transform: translateX(-150%);}
-  100% { transform: translateX(50%);}
+  0% { transform: translateX(50%);}
+
+  100% { transform: translateX(-150%);}
 }
 /* /ex 12 */
 .ex-12-top-white, .ex-13-top-white {
